
[package]
name = "screen-sage"
version = "0.1.0"
edition = "2021"
authors = ["Screen Sage Team"]
description = "A web-based tool for executing Linux commands via a user-friendly interface"

[dependencies]
actix-web = "4.3"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
obws = "0.11.5"
clap = { version = "4.3.11", features = ["derive"] }
url = "2.4.0"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["json", "multipart"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
actix-multipart = "0.6"
actix-ws = "0.3"
futures = "0.3"
sanitize-filename = "0.4"
futures-util = "0.3.31"
sysinfo = "0.30"
tracing = "0.1"
tracing-subscriber = "0.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
